Update 'gp-app-0325' component image to: quay.io/yangcao/gp-app-0325:888d78e71c7ff87d7ae54fa332b9da291ea39c74@sha256:cc9bb1574b3b8ae81a7fbe75498d31ea8d817f5eabdc9af52e8d63985d12f0b3

--- a/components/gp-app-0325/overlays/development/deployment-patch.yaml
+++ b/components/gp-app-0325/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gp-app-0325
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/yangcao/gp-app-0325:888d78e71c7ff87d7ae54fa332b9da291ea39c74@sha256:cc9bb1574b3b8ae81a7fbe75498d31ea8d817f5eabdc9af52e8d63985d12f0b3
+          name: container-image
